using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Pocruga.OOPT.CharacterSheet {
    
    public class PlayerCharacter : MonoBehaviour
    {
        // Start is called before the first frame update
        void Start()
        {
            
        }

        // Update is called once per frame
        void Update()
        {
            
        }
    }
}
